--- a/src/app/views/pages/register.component.html
+++ b/src/app/views/pages/register.component.html
@@ -3,41 +3,32 @@
     <div class="row justify-content-center">
       <div class="col-md-6">
         <div class="card mx-4">
-          <div class="card-body p-4">
+          <form class="card-body p-4" (ngSubmit)="register()" #registerForm="ngForm">
             <h1>Register</h1>
             <p class="text-muted">Create your account</p>
             <div class="input-group mb-3">
               <span class="input-group-addon"><i class="icon-user"></i></span>
-              <input type="text" class="form-control" placeholder="Username">
+              <input [(ngModel)]="modal.name" name="name" type="text" class="form-control" placeholder="Username">
             </div>
 
             <div class="input-group mb-3">
               <span class="input-group-addon">@</span>
-              <input type="text" class="form-control" placeholder="Email">
+              <input [(ngModel)]="modal.email" name="email" type="email" required class="form-control" placeholder="Email">
             </div>
 
             <div class="input-group mb-3">
               <span class="input-group-addon"><i class="icon-lock"></i></span>
-              <input type="password" class="form-control" placeholder="Password">
+              <input [(ngModel)]="modal.password" name="password" type="password" required class="form-control" placeholder="Password">
             </div>
 
             <div class="input-group mb-4">
               <span class="input-group-addon"><i class="icon-lock"></i></span>
-              <input type="password" class="form-control" placeholder="Repeat password">
+              <input [(ngModel)]="modal.password2" name="password2" type="password" required class="form-control" placeholder="Repeat password">
             </div>
 
-            <button type="button" class="btn btn-block btn-success">Create Account</button>
-          </div>
-          <div class="card-footer p-4">
-            <div class="row">
-              <div class="col-6">
-                <button class="btn btn-block btn-facebook" type="button"><span>facebook</span></button>
-              </div>
-              <div class="col-6">
-                <button class="btn btn-block btn-twitter" type="button"><span>twitter</span></button>
-              </div>
-            </div>
-          </div>
+            <button [disabled]="!registerForm.form.valid"
+                    type="submit" class="btn btn-block btn-success">Create Account</button>
+          </form>
         </div>
       </div>
     </div>
