--- a/src/app/components/app-header/app-header.component.html
+++ b/src/app/components/app-header/app-header.component.html
@@ -6,6 +6,7 @@
   <button class="navbar-toggler d-md-down-none" type="button" appSidebarToggler>
     <span class="navbar-toggler-icon"></span>
   </button>
+  Hello,&nbsp;<b>{{user.user.email}}</b>
   <!--<ul class="nav navbar-nav d-md-down-none">-->
     <!--<li class="nav-item px-3">-->
       <!--<a class="nav-link" href="#">Dashboard</a>-->
