--- a/src/app/views/pages/login.component.html
+++ b/src/app/views/pages/login.component.html
@@ -11,25 +11,29 @@
       <div class="col-md-8">
         <div class="card-group">
           <div class="card p-4">
-            <form class="card-body" (ngSubmit)="login()" #loginForm="ngForm">
+            <form class="card-body" #loginForm="ngForm">
               <h1>Login</h1>
               <p class="text-muted">Sign In to your account</p>
               <div class="input-group mb-3">
                 <span class="input-group-addon"><i class="icon-user"></i></span>
-                <input [(ngModel)]="user.email" name="email" type="email" required class="form-control" placeholder="Username">
+                <input [(ngModel)]="userModel.email" name="email" type="email" required class="form-control" placeholder="Username">
               </div>
               <div class="input-group mb-4">
                 <span class="input-group-addon"><i class="icon-lock"></i></span>
-                <input [(ngModel)]="user.password" name="password" type="password" required class="form-control" placeholder="Password">
+                <input [(ngModel)]="userModel.password" name="password" type="password" required class="form-control" placeholder="Password">
               </div>
+
+              <div class="row" *ngIf="loginFailed">
+                <div class="col-12">
+                  <p style="color: red">Your email or password is incorrect</p>
+                </div>
+              </div>
+
               <div class="row">
                 <div class="col-6">
                   <button [disabled]="!loginForm.form.valid"
-                          type="submit" class="btn btn-primary px-4">Login</button>
+                          type="button" (click)="login()" class="btn btn-primary px-4">Login</button>
                 </div>
-                <!--<div class="col-6 text-right">-->
-                  <!--<button type="submit" class="btn btn-link px-0">Forgot password?</button>-->
-                <!--</div>-->
               </div>
             </form>
           </div>
