--- a/src/app/views/components/modals.component.html
+++ b/src/app/views/components/modals.component.html
@@ -6,7 +6,7 @@
           <i class="fa fa-align-justify"></i> Bootstrap Modals
         </div>
         <div class="card-body">
-          <!-- Button trigger modal -->
+          <!-- Button trigmodelodal -->
           <button type="button" class="btn btn-secondary" data-toggle="modal" (click)="myModal.show()">
             Launch demo modal
           </button>
@@ -54,9 +54,9 @@
         <button type="button" class="btn btn-secondary" (click)="myModal.hide()">Close</button>
         <button type="button" class="btn btn-primary">Save changes</button>
       </div>
-    </div><!-- /.modal-content -->
-  </div><!-- /.modal-dialog -->
-</div><!-- /.modal -->
+    </div><!-modelodal-content -->
+  </div><!-modelodal-dialog -->
+</div><!-modelodal -->
 
 <div bsModal #largeModal="bs-modal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
   <div class="modal-dialog modal-lg" role="document">
@@ -74,9 +74,9 @@
         <button type="button" class="btn btn-secondary" (click)="largeModal.hide()">Close</button>
         <button type="button" class="btn btn-primary">Save changes</button>
       </div>
-    </div><!-- /.modal-content -->
-  </div><!-- /.modal-dialog -->
-</div><!-- /.modal -->
+    </div><!-modelodal-content -->
+  </div><!-modelodal-dialog -->
+</div><!-modelodal -->
 
 <div bsModal #smallModal="bs-modal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
   <div class="modal-dialog modal-sm" role="document">
@@ -94,9 +94,9 @@
         <button type="button" class="btn btn-secondary" (click)="smallModal.hide()">Close</button>
         <button type="button" class="btn btn-primary">Save changes</button>
       </div>
-    </div><!-- /.modal-content -->
-  </div><!-- /.modal-dialog -->
-</div><!-- /.modal -->
+    </div><!-modelodal-content -->
+  </div><!-modelodal-dialog -->
+</div><!-modelodal -->
 
 
 <div bsModal #primaryModal="bs-modal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
@@ -115,9 +115,9 @@
         <button type="button" class="btn btn-secondary" (click)="primaryModal.hide()">Close</button>
         <button type="button" class="btn btn-primary">Save changes</button>
       </div>
-    </div><!-- /.modal-content -->
-  </div><!-- /.modal-dialog -->
-</div><!-- /.modal -->
+    </div><!-modelodal-content -->
+  </div><!-modelodal-dialog -->
+</div><!-modelodal -->
 
 
 <div bsModal #successModal="bs-modal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
@@ -136,9 +136,9 @@
         <button type="button" class="btn btn-secondary" (click)="successModal.hide()">Close</button>
         <button type="button" class="btn btn-success">Save changes</button>
       </div>
-    </div><!-- /.modal-content -->
-  </div><!-- /.modal-dialog -->
-</div><!-- /.modal -->
+    </div><!-modelodal-content -->
+  </div><!-modelodal-dialog -->
+</div><!-modelodal -->
 
 
 <div bsModal #warningModal="bs-modal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
@@ -157,9 +157,9 @@
         <button type="button" class="btn btn-secondary" (click)="warningModal.hide()">Close</button>
         <button type="button" class="btn btn-warning">Save changes</button>
       </div>
-    </div><!-- /.modal-content -->
-  </div><!-- /.modal-dialog -->
-</div><!-- /.modal -->
+    </div><!-modelodal-content -->
+  </div><!-modelodal-dialog -->
+</div><!-modelodal -->
 
 <div bsModal #dangerModal="bs-modal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
   <div class="modal-dialog modal-danger" role="document">
@@ -177,9 +177,9 @@
         <button type="button" class="btn btn-secondary" (click)="dangerModal.hide()">Close</button>
         <button type="button" class="btn btn-danger">Save changes</button>
       </div>
-    </div><!-- /.modal-content -->
-  </div><!-- /.modal-dialog -->
-</div><!-- /.modal -->
+    </div><!-modelodal-content -->
+  </div><!-modelodal-dialog -->
+</div><!-modelodal -->
 
 <div bsModal #infoModal="bs-modal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
   <div class="modal-dialog modal-info" role="document">
@@ -197,6 +197,6 @@
         <button type="button" class="btn btn-secondary" (click)="infoModal.hide()">Close</button>
         <button type="button" class="btn btn-info">Save changes</button>
       </div>
-    </div><!-- /.modal-content -->
-  </div><!-- /.modal-dialog -->
-</div><!-- /.modal -->
+    </div><!-modelodal-content -->
+  </div><!-modelodal-dialog -->
+</div><!-modelodal -->
