Added possibility to Add project from Dashboard or from Aside

--- a/src/app/containers/full-layout/full-layout.component.html
+++ b/src/app/containers/full-layout/full-layout.component.html
@@ -1,8 +1,8 @@
 <app-header></app-header>
 <div class="app-body">
-  <app-sidebar></app-sidebar>
+  <!--<app-sidebar></app-sidebar>-->
   <!-- Main content -->
-  <main class="main" style="padding-top: 35px;">
+  <main class="main" style="padding-top: 35px; margin-left: 0;">
     <!-- Breadcrumb -->
     <!--<ol class="breadcrumb">-->
       <!--<app-breadcrumbs></app-breadcrumbs>-->
