--- a/src/app/components/app-header/app-header.component.html
+++ b/src/app/components/app-header/app-header.component.html
@@ -1,27 +1,36 @@
 <header class="app-header navbar">
-  <button class="navbar-toggler d-lg-none" type="button" appMobileSidebarToggler>
+
+  <button class="navbar-toggler d-md-down-none" type="button" appAsideMenuToggler>
     <span class="navbar-toggler-icon"></span>
+
+    <span class="project-name" *ngIf="activeProject && userModel">
+      <span>{{activeProject.name}}</span>
+      <span>{{userModel.name}}</span>
+    </span>
+
+    <span class="project-name" *ngIf="!activeProject && user.user">
+      <span>{{userModel.name}}, </span>
+      <span>Welcome to Recommender Service</span>
+    </span>
+
   </button>
-  <!--<a class="navbar-brand" href="#"></a>-->
-  <button class="navbar-toggler d-md-down-none" type="button" appSidebarToggler>
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  Hello,&nbsp;<b>{{user.user.model.name}}</b>
-  <!--<ul class="nav navbar-nav d-md-down-none">-->
-    <!--<li class="nav-item px-3">-->
-      <!--<a class="nav-link" href="#">Dashboard</a>-->
-    <!--</li>-->
-    <!--<li class="nav-item px-3">-->
-      <!--<a class="nav-link" href="#">Users</a>-->
-    <!--</li>-->
-    <!--<li class="nav-item px-3">-->
-      <!--<a class="nav-link" href="#">Settings</a>-->
-    <!--</li>-->
-  <!--</ul>-->
-  <ul class="nav navbar-nav ml-auto">
-    <li class="nav-item d-md-down-none">
-      <a class="nav-link" href="#"><i class="icon-bell"></i><span class="badge badge-pill badge-danger">5</span></a>
+
+  <ul class="nav navbar-nav links" *ngIf="activeProject">
+    <li class="nav-item px-3">
+      <a class="nav-link" href="#/dashboard">Dashboard</a>
     </li>
+    <li class="nav-item px-3">
+      <a class="nav-link" href="#">Users</a>
+    </li>
+    <li class="nav-item px-3">
+      <a class="nav-link" href="#">Settings</a>
+    </li>
+  </ul>
+
+  <ul class="nav navbar-nav ml-auto">
+    <!--<li class="nav-item d-md-down-none">-->
+      <!--<a class="nav-link" href="#"><i class="icon-bell"></i><span class="badge badge-pill badge-danger">5</span></a>-->
+    <!--</li>-->
     <!--<li class="nav-item d-md-down-none">-->
       <!--<a class="nav-link" href="#"><i class="icon-list"></i></a>-->
     <!--</li>-->
@@ -40,7 +49,7 @@
         <!--<a class="dropdown-item" href="#"><i class="fa fa-comments"></i> Comment<span class="badge badge-warning">42</span></a>-->
         <!--<div class="dropdown-header text-center"><strong>Settings</strong></div>-->
         <!--<a class="dropdown-item" href="#"><i class="fa fa-user"></i> Profile</a>-->
-        <a class="dropdown-item" (click)="getUsers()"><i class="fa fa-wrench"></i> Setting</a>
+        <a class="dropdown-item"><i class="fa fa-wrench"></i> Setting</a>
         <!--<a class="dropdown-item" href="#"><i class="fa fa-usd"></i> Payments<span class="badge badge-dark">42</span></a>-->
         <!--<a class="dropdown-item" href="#"><i class="fa fa-file"></i> Projects<span class="badge badge-primary">42</span></a>-->
         <div class="divider"></div>
@@ -49,9 +58,7 @@
       </div>
     </li>
 
-    <button class="navbar-toggler d-md-down-none" type="button" appAsideMenuToggler>
-      <span class="navbar-toggler-icon"></span>
-    </button>
+
 
   </ul>
 </header>
