Data configuration page

--- a/src/app/components/app-header/app-header.component.html
+++ b/src/app/components/app-header/app-header.component.html
@@ -20,7 +20,7 @@
       <a class="nav-link" href="#/dashboard">Dashboard</a>
     </li>
     <li class="nav-item px-3">
-      <a class="nav-link" href="#">Users</a>
+      <a class="nav-link" href="#/data-configuration">Data configuration</a>
     </li>
     <li class="nav-item px-3">
       <a class="nav-link" href="#">Settings</a>
