Collected data, generated item sets

--- a/src/app/components/data-configuration/components/item-sets/item-sets.component.html
+++ b/src/app/components/data-configuration/components/item-sets/item-sets.component.html
@@ -1,3 +1,56 @@
-<p>
-  item-sets works!
-</p>
+
+
+<div class="row">
+
+  <div class="col-md-12" *ngIf="rules && rules.length">
+    <div class="form-inline" style="margin-bottom: 20px;">
+      <div class="form-group">
+        <input class="form-control form-control-sm " name="nf-email" style="margin-right: 20px;"
+               placeholder="Support" type="number">
+
+        <input class="form-control form-control-sm " name="nf-email" style="margin-right: 20px;"
+               placeholder="Confidence" type="number">
+
+        <button class="btn btn-sm btn-success" type="submit">Generate new rules</button>
+
+      </div>
+    </div>
+  </div>
+
+  <div class="col-md-12">
+
+    <mat-progress-bar style="margin-bottom: 20px;"
+                      *ngIf="loading"
+                      [color]="'primary'"
+                      [mode]="'indeterminate'">
+    </mat-progress-bar>
+
+    <table class="table table-sm" *ngIf="rules && rules.length">
+      <thead>
+      <tr>
+        <th>Antecedants</th>
+        <th>Consequents</th>
+        <th>Support</th>
+        <th>Confidence</th>
+        <th>Lift</th>
+      </tr>
+      </thead>
+
+      <tbody>
+      <tr *ngFor="let rule of rules">
+        <td>{{rule.antecedants}}</td>
+        <td>{{rule.consequents}}</td>
+        <td>{{rule.support}}</td>
+        <td>{{rule.confidence}}</td>
+        <td>{{rule.lift}}</td>
+      </tr>
+
+      </tbody>
+    </table>
+
+    <p *ngIf="rules && !rules.length">
+      Your don't have any generated rules
+    </p>
+
+  </div>
+</div>
