--- a/src/app/components/app-header/app-header.component.html
+++ b/src/app/components/app-header/app-header.component.html
@@ -17,10 +17,22 @@
 
   <ul class="nav navbar-nav links" *ngIf="activeProject">
     <li class="nav-item px-3">
-      <a class="nav-link" href="#/dashboard">Dashboard</a>
+      <a class="nav-link" href="#/dashboard">
+        <i class="fa fa-area-chart fa-lg"></i>
+        Dashboard
+      </a>
     </li>
     <li class="nav-item px-3">
-      <a class="nav-link" href="#/data-configuration">Data configuration</a>
+      <a class="nav-link" href="#/data-configuration">
+        <i class="fa fa-database fa-lg"></i>
+        Data center
+      </a>
+    </li>
+    <li class="nav-item px-3">
+      <a class="nav-link" href="#/api">
+        <i class="fa fa-random fa-lg"></i>
+        API
+      </a>
     </li>
     <li class="nav-item px-3">
       <a class="nav-link" href="#">Settings</a>
