--- a/src/app/components/data-configuration/data-configuration.component.html
+++ b/src/app/components/data-configuration/data-configuration.component.html
@@ -3,7 +3,7 @@
     <div class="col-sm-12">
       <div class="card card-accent-primary">
         <div class="card-header">
-          <b>Data configuration</b>
+          <b>DATA CENTER</b>
         </div>
         <div class="card-body">
           <tabset #staticTabs>
