--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -110,3 +110,8 @@
 mat-progress-bar {
   height: 8px !important;
 }
+
+.navbar-nav.links .nav-item i {
+  display: inline-block;
+  margin-right: 5px;
+}
