--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -115,3 +115,11 @@ mat-progress-bar {
   display: inline-block;
   margin-right: 5px;
 }
+
+.break-line {
+  white-space: pre-wrap;      /* CSS3 */
+  white-space: -moz-pre-wrap; /* Firefox */
+  white-space: -pre-wrap;     /* Opera <7 */
+  white-space: -o-pre-wrap;   /* Opera 7 */
+  word-wrap: break-word;      /* IE */
+}
